@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use English;
-use Error::Pure::Utils qw(clean);
+use Error::Pure::Utils qw(clean err_msg);
 use Test::MockObject;
 use Test::More 'tests' => 5;
 use Test::NoWarnings;
@@ -15,8 +15,17 @@ my $self = {
 eval {
 	check_isa($self, 'key', 'Foo');
 };
-is($EVAL_ERROR, "Parameter 'key' must be a 'Foo' object.\n",
-	"Parameter 'key' must be a 'Foo' object (is string).");
+my @errors = err_msg();
+is_deeply(
+	\@errors,
+	[
+		"Parameter 'key' must be a 'Foo' object.",
+# XXX
+#		'Value',
+#		'foo',
+	],
+	"Parameter 'key' must be a 'Foo' object (is string)."
+);
 clean();
 
 # Test.
@@ -31,8 +40,16 @@ $self = {
 eval {
 	check_isa($self, 'key', 'Foo');
 };
-is($EVAL_ERROR, "Parameter 'key' must be a 'Foo' object.\n",
-	"Parameter 'key' must be a 'Foo' object (is another object).");
+@errors = err_msg();
+is_deeply(
+	\@errors,
+	[
+		"Parameter 'key' must be a 'Foo' object.",
+		'Reference',
+		'Bar',
+	],
+	"Parameter 'key' must be a 'Foo' object (is another object)."
+);
 clean();
 
 # Test.
